# minui-easy-installer

./: .editorconfig  .eslintrc.cjs  .gitignore  .oxfmtrc.json  AGENTS.md  DESIGN.md  README.md  fix.md  index.html  justfile  package-lock.json  package.json  prek.toml  skills-lock.json  tweak.md  vite.config.ts  vitest.config.ts
.changeset/: brave-bugs-type.md
assets/: store.json
icons/: icon.icns
plans/: 001-stream-archive-downloads.md  002-cancel-install-mechanism.md  003-fs-utils-tests.md  004-tauri-command-handler-tests.md  005-harden-version-parser.md  006-fix-mock-server-test-hang.md  007-consolidate-canonicalize-helper.md  008-harden-bios-symlink-escape.md  009-harden-wifi-symlink-escape.md  README.md
scripts/: discover-packages.ts  discovered.json  shared.ts  update-registry.ts
src/: App.tsx  BiosInstaller.test.tsx  BiosInstaller.tsx  ConfirmDialog.tsx  DeviceSelector.tsx  DriveSelector.test.tsx  DriveSelector.tsx  (+14 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bios.rs  bios_tests.rs  download.rs  drives.rs  drives_tests.rs  extract.rs  fs_utils.rs  health.rs  install.rs  install_copy_tests.rs  install_extras_tests.rs  install_manager.rs  install_manager_tests.rs  install_tests.rs  lib.rs  lib_tests.rs  main.rs  package.rs  pipeline.rs  platform.rs  validate.rs  version.rs  wifi.rs  wifi_tests.rs
src-tauri/src/drives/: linux.rs  macos.rs  windows.rs
src-tauri/src/version/: mod.rs  tests.rs
src-tauri/src/wifi/: linux.rs  macos.rs  windows.rs
(+57 files in other folders)
