[package]
name = "minui-easy-installer"
version = "0.1.0"
description = "MinUI Easy Installer & Package Store"
authors = ["MinUI Community"]
edition = "2021"

[lib]
name = "minui_easy_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
zip = "0.6"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
